styles.css
.calculatorContainer {
    max-inline-size: 22rem;
    margin: 100px;
    display: grid;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    overflow: hidden;
}

.display {
    font-size: 2rem;
    text-align: end;
    background: #6d597a; 
    color: hsl(255, 100%, 100%);
    padding: 20px;
    font-size: 20px;
    

}

.calculatorKeys {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
}

.zero {
    grid-column: 1 / 3; 
    background: #b56576; 
}

.decimal,
.one,
.two,
.three,
.four,
.five,
.six,
.seven,
.eight,
.nine {
    background: #b56576;
}

.AC,
.plusMinus,
.percentage {
    background: #eaac8b;
}

.equals,
.plus,
.minus,
.divide,
.multiply {
    background: #859ebe;

}

